Chapter 6 problems. GN and LM g2O PnP implementation

--- a/simple_feature_tracking/src/CMakeLists.txt
+++ b/simple_feature_tracking/src/CMakeLists.txt
@@ -1,3 +1,5 @@
 add_subdirectory(utils)
 add_executable(orb_test orb_test.cpp)
-target_link_libraries(orb_test ${OpenCV_LIBS} utils ${Sophus_LIBRARIES})
+target_link_libraries(orb_test ${OpenCV_LIBS} utils 
+${Sophus_LIBRARIES}
+g2o_core g2o_stuff)
