--- a/simple_feature_tracking/src/utils/CMakeLists.txt
+++ b/simple_feature_tracking/src/utils/CMakeLists.txt
@@ -1,5 +1,6 @@
 # Create a library for utils
-add_library(utils ORB_helper_functions.cpp)
+add_library(utils ORB_helper_functions.cpp nonlinear_optimization.cpp)
+
 
 # Specify include directories
 target_include_directories(utils PUBLIC ${PROJECT_SOURCE_DIR}/include/utils)
