--- a/simple_feature_tracking/CMakeLists.txt
+++ b/simple_feature_tracking/CMakeLists.txt
@@ -7,11 +7,13 @@ set(CMAKE_CXX_FLAGS "-std=c++11 -O2 ${SSE_FLAGS} -msse4")
 list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
 
 find_package(OpenCV REQUIRED)
+find_package(G2O REQUIRED)
 find_package(Sophus REQUIRED)
 include_directories(
         ${PROJECT_SOURCE_DIR}/include
         ${OpenCV_INCLUDE_DIRS}
         "/usr/include/eigen3/"
         ${Sophus_INCLUDE_DIRS}
+        ${G2O_INCLUDE_DIRS}
 )
 add_subdirectory(src)
